# Argus_PVRS_Parser

./: .gitignore  API.md  DESIGN_ROUNDTRIP.md  FULL_TOKEN_EDITOR_API.md  argus_pvrs_keywords.txt  build_linux.sh  count_keywords.py  expand_macros.py  extract_keyword_lines.py  full_token_editor.py  modify_rules.py  pvrs_utils.py  pyproject.toml  rule_editor.py  rule_editor_plugin.py  sample_token_editor.py  test_errors.py  tmp
.claude/: settings.local.json
full_token_editor/: README.md  __init__.py  __main__.py  cli.py  collector.py  core.py  elements.py  plugin.py
grammar/: PVRSLexer.g4  PVRSParser.g4
tests/: test_roundtrip.pvrs  test_roundtrip_output.txt
